--- a/MichaelsCaefe/Order_details.resx
+++ b/MichaelsCaefe/Order_details.resx
@@ -58,10 +58,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-  <data name="loginLogo.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgoAAAFyCAYAAACUWPJkAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
-        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAAMh0AADIdAbJS7ngAAP+WSURBVHhe7J0HvCVFlf/fBIZh
+        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAAMiEAADIhAbIZUFEAAP+WSURBVHhe7J0HvCVFlf/fBIZh
         MjPDzDAMUYJK2FUYmIEBJAeJEkQxJ8yCf+OaMOsqSjBnV1ERzCKirjnHNaxh3XVddc1xV13z+59v8X6X
         886r6tv3vXv73jfT5/P5fbq6uru6Up/z61PV1WN///d/Pwm3uc1txm5961uP7b///mMHH3xw2u63335j
         e+21V9re6la32t7iDrLt/W55y1teZnilhd9keKnhWXbtBWvXrr3Fpk2bxv7u7/4uXWPncF0K77vvvmO7
@@ -1326,16 +1326,6 @@
         Th8ND09psxRukglIIgpJ2kli9ighoUgYJ1GQsO4IhAHfqAYyW/ykh44BfCQDHvGrdRtv3WfFTTcCEyQK
         Xug/oQuBkmRgBwUEmL/N3G/+lKmWyXNNUhJRSNJOErNHCQlFwgSJgkSfsccvQgJYXImIOgSCwY40nvGV
         rI0woU8WPHufox3/H0+u4ZyjTXunAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACUAAAAcCAYAAADm63ZmAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAX
-        EQAAFxEByibzPwAAAQZJREFUWEfNllENhDAQRNcDDtCACv4xgQYU4AAbGCDBBi4w0ONNrh9c+n2zTYZs
-        SJN9aafTRnnGtm1lGIYSETbRHw5GUEzTVLqua07+l+gPBzwBoRuoCo7vjrUnWJVllarEM8+z3eRVcCzL
-        UuK6Lpmr7/vmxH+J/uu6FngUCRTHcQjOoX3fJTgUCfomG3mh2DoMRni5RH84BEXBCXRHA/3hgCfGcbSf
-        vCo44Hnq9gSrsiW6lG37MH2c55nC6KieQEUCYM5IYFHoD4ciQd9kIy+U+0JGrwuZgieD2+ivp0u2Rx48
-        OZ/Dvz9TiCXLslpwyEo4nwBzg9EfDngUCRRus9OfWLjvu3wAFTn92wmWpTYAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
